@@ -23,6 +23,31 @@
 
 #include <gtk/gtk.h>
 #include "road.h"
+#include "util.h"
+
+#ifdef HAVE_CONFIG_H
+#  include <config.h>
+#endif
+
+#define	ROAD_SUFFIX_LIST_FILE_NAME ("road-suffix-list.txt")
+#define ROAD_SUFFIX_LIST_MIN_WORDS (2)
+
+struct {
+	GArray* pRoadNameSuffixArray;	// an array of null-terminated vectors (an array of gchar* with the last being NULL)
+} g_Road = {0};
+
+void road_init()
+{
+	gchar* pszPath = g_strdup_printf(PACKAGE_SOURCE_DIR"/data/%s", ROAD_SUFFIX_LIST_FILE_NAME);
+	if(util_load_array_of_string_vectors(pszPath, &(g_Road.pRoadNameSuffixArray), ROAD_SUFFIX_LIST_MIN_WORDS) == FALSE) {
+		g_free(pszPath);
+		pszPath = g_strdup_printf(PACKAGE_DATA_DIR"/data/%s", ROAD_SUFFIX_LIST_FILE_NAME);
+		if(util_load_array_of_string_vectors(pszPath, &(g_Road.pRoadNameSuffixArray), ROAD_SUFFIX_LIST_MIN_WORDS) == FALSE) {
+			g_error("Unable to load %s", ROAD_SUFFIX_LIST_FILE_NAME);
+		}
+	}
+	g_free(pszPath);
+}
 
 struct {
 	gchar* pszLong;
@@ -158,8 +183,7 @@ struct {
 	{"Tunl", ROAD_SUFFIX_TUNNEL},
 	
 	{"Walk", ROAD_SUFFIX_WALK},
-	{"Walk", ROAD_SUFFIX_WALK},
-	
+
 	{"Branch", ROAD_SUFFIX_BRANCE},
 	{"Br", ROAD_SUFFIX_BRANCE},
 	
@@ -193,24 +217,29 @@ struct {
 
 const gchar* road_suffix_itoa(gint nSuffixID, ESuffixLength eSuffixLength)
 {
-	if(nSuffixID >= ROAD_SUFFIX_FIRST && nSuffixID <= ROAD_SUFFIX_LAST) {
-		if(eSuffixLength == ROAD_SUFFIX_LENGTH_SHORT) {
-			return g_RoadNameSuffix[nSuffixID].pszShort;
-		}
-		else {
-			return g_RoadNameSuffix[nSuffixID].pszLong;			
-		}
+	if(nSuffixID < g_Road.pRoadNameSuffixArray->len) {
+		//g_debug("looking up suffixID %d", nSuffixID);
+		gchar** apszWords = g_array_index(g_Road.pRoadNameSuffixArray, gchar**, nSuffixID);
+		g_assert(eSuffixLength == 0 || eSuffixLength == 1);	// we know there are at least 2 words in the array (see call to util_load_name_list)
+		return apszWords[eSuffixLength];
 	}
-	if(nSuffixID != ROAD_SUFFIX_NONE) return "???";
-	return "";
+	else {
+		return "";
+	}
 }
 
 gboolean road_suffix_atoi(const gchar* pszSuffix, gint* pReturnSuffixID)
 {
+	g_assert(pszSuffix != NULL);
+	g_assert(pReturnSuffixID != NULL);
+
 	gint i;
-	for(i=0 ; i<G_N_ELEMENTS(g_RoadNameSuffixLookup) ; i++) {
-		if(g_ascii_strcasecmp(pszSuffix, g_RoadNameSuffixLookup[i].pszName) == 0) {
-			*pReturnSuffixID = g_RoadNameSuffixLookup[i].nID;
+	for(i=0 ; i<g_Road.pRoadNameSuffixArray->len ; i++) {
+		gchar** apszWords = g_array_index(g_Road.pRoadNameSuffixArray, gchar**, i);
+
+		// Does this list of words contain the string?
+		if(util_find_string_in_string_vector(pszSuffix, apszWords, NULL)) {
+			*pReturnSuffixID = i;
 			return TRUE;
 		}
 	}
